force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInEDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInEDate__c</fullName>
    <description>Date fin de livraison pour la ligne</description>
    <label>SellIn End Date Exception</label>
    <type>Date</type>
</CustomField>