force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInEDateCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInEDateCP__c</fullName>
    <description>Date fin vente conso prévue au niveau de l&apos;event</description>
    <formula>Negoptim__CommercialPlan__r.Negoptim__SellInEDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event SellIn End Date</label>
    <type>Date</type>
</CustomField>