force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInFact__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInFact__c</fullName>
    <description>CA réel (Qté * PAN)</description>
    <formula>Negoptim__NetPricePromo__c * Negoptim__QuantityFact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Fact</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>