force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInLanded__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInLanded__c</fullName>
    <description>CA atterit (Qté * PAN)</description>
    <formula>Negoptim__NetPricePromo__c * Negoptim__QuantityLanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Landed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>