force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInPreOrder__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInPreOrder__c</fullName>
    <description>CA reservé (Qté * PAN)</description>
    <formula>Negoptim__NetPricePromo__c * Negoptim__QuantityPreOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In PreOrder</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>