force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInPreOrderBDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInPreOrderBDate__c</fullName>
    <description>Date début d&apos;engagement de commande</description>
    <label>Sell In pre order begin date</label>
    <type>Date</type>
</CustomField>