force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInPreOrderBDateMonth__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInPreOrderBDateMonth__c</fullName>
    <formula>TEXT( MONTH( Negoptim__SellInPreOrderBDate__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in order month</label>
    <type>Text</type>
</CustomField>