force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInPreOrderBDateYear__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInPreOrderBDateYear__c</fullName>
    <description>Année date début d&apos;engagement de commande</description>
    <formula>YEAR( Negoptim__SellInPreOrderBDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approve order Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>