force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInPreOrderEDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInPreOrderEDate__c</fullName>
    <description>Date fin d&apos;engagement de commande</description>
    <label>Sell In pre order end date</label>
    <type>Date</type>
</CustomField>