force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInTarget__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInTarget__c</fullName>
    <description>CA prévisionnel (Qté * PAN)</description>
    <formula>Negoptim__NetPricePromo__c * Negoptim__QuantityTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Target</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>