force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutBDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutBDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>In-store start date</label>
    <type>Date</type>
</CustomField>