force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutBDateCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutBDateCP__c</fullName>
    <description>Date début vente conso prévue au niveau de l&apos;event</description>
    <formula>Negoptim__CommercialPlan__r.Negoptim__SellOutBDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>