force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutDiscountMassValueInvoice__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutDiscountMassValueInvoice__c</fullName>
    <description>Montant total facturé</description>
    <label>Sell Out Discount Mass Valu eInvoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>