force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutDiscountUnitValue__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutDiscountUnitValue__c</fullName>
    <formula>Negoptim__RetailPricePromowoTax__c * Negoptim__SellOutDiscountValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Out Discount Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>