force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutDiscountUnitValueInvoice__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutDiscountUnitValueInvoice__c</fullName>
    <description>Remise unitaire appliquée dans la facture</description>
    <label>Sell Out Discount Unit Value Invoice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>