force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutDiscountValue__c</fullName>
    <description>Pourcentage/valeur réelle de la remise</description>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>