force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutEDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutEDate__c</fullName>
    <description>Date fin vente conso pour la ligne</description>
    <label>In-store end date</label>
    <type>Date</type>
</CustomField>