force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutEDateCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutEDateCP__c</fullName>
    <description>Date fin livraison prévue au niveau de l&apos;event</description>
    <formula>Negoptim__CommercialPlan__r.Negoptim__SellOutEDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>