force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellOutOfferType__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellOutOfferType__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO_Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>