force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attempt (Tentatif)</fullName>
            </value>
            <value>
                <fullName>Demande de capa</fullName>
            </value>
            <value>
                <fullName>Validated Capa (Ok capa)</fullName>
            </value>
            <value>
                <fullName>StandBY</fullName>
            </value>
            <value>
                <fullName>Request for approval (Proposée)</fullName>
            </value>
            <value>
                <fullName>Validated (Acceptée)</fullName>
            </value>
            <value>
                <fullName>Realized (Réalisée)</fullName>
            </value>
            <value>
                <fullName>Invoiced (Facturée)</fullName>
            </value>
            <value>
                <fullName>Rejected DC (Refusée capa)</fullName>
            </value>
            <value>
                <fullName>Rejected Client (Refusée client)</fullName>
            </value>
            <value>
                <fullName>Canceled (Annulée)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>