force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Supplier__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Negoptim__Supplier__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Supplier)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>