force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supplier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DA Fournisseur Mapping</label>
    <referenceTo>Negoptim__Supplier_PG_Mapping__c</referenceTo>
    <relationshipLabel>Commercial Plan Details</relationshipLabel>
    <relationshipName>Commercial_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>