force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SupplierProduct__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SupplierProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Product</label>
    <referenceTo>Negoptim__SupplierAssortment__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Supplier Product)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsSupProduct</relationshipName>
    <type>Lookup</type>
</CustomField>