force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SupportLDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SupportLDate__c</fullName>
    <label>Last Support Date</label>
    <type>DateTime</type>
</CustomField>