force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__TariffCostPromo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TariffCostPromo__c</fullName>
    <description>PAB HT spécifique pour la promo</description>
    <label>Promo Purchase Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>