force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__TradeActivityNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TradeActivityNumber__c</fullName>
    <label>Trade Activity Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>