force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__UnitNeed__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__UnitNeed__c</fullName>
    <label>Unit Need</label>
    <type>TextArea</type>
</CustomField>