force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__UnitNeedDesc__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__UnitNeedDesc__c</fullName>
    <label>Unit Need Desc</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>