force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__VolumeFact__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VolumeFact__c</fullName>
    <description>Volume réel suivant l&apos;unité de mesure du volume définie</description>
    <label>Actual volume (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>