force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__VolumeTarget__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VolumeTarget__c</fullName>
    <description>Volume prévisionel suivant l&apos;unité de mesure du volume définie</description>
    <label>Forecast Volume (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>