force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__VolumeValidate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VolumeValidate__c</fullName>
    <label>Invoiced volume (kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>