force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__VolumeValidatePartner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VolumeValidatePartner__c</fullName>
    <label>Volume Commit Client</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>