force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/listViews/Negoptim__All.listView-meta.xml
<ListView>
    <fullName>Negoptim__All</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__UnitNeedDesc__c</columns>
    <columns>Negoptim__Product__c</columns>
    <columns>Negoptim__BusinessUnitTarget__c</columns>
    <columns>Negoptim__SellOutBDate__c</columns>
    <columns>Negoptim__SellOutEDate__c</columns>
    <columns>Negoptim__SellInPreOrderBDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>